crates/cli/tests/snapshots/lib__check@cant_infer_lambda.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_infer_lambda.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_infer_lambda.nemo
---
success: false
exit_code: 1
----- stdout -----
[27] Error: Can't infer type of unannotated lambda
   ╭─[ tests/check/cant_infer_lambda.nemo:2:15 ]
   │
 2 │   let clos = \(z) { z };
   │               ─┬─  
   │                ╰─── Can't infer type of unannotated lambda
───╯


----- stderr -----
Error: "Check failed with 1 errors"
